# CalcGTest

./: CMakeLists.txt  SimpleCalculator.cpp
.github/workflows/: build.yml  unit.yml
test/: CMakeLists.txt  History.cpp  MockTests.cpp  Operations.cpp  Overflow.cpp  OverflowTests.cpp
